omni/tests/goldens/types/undefined_ident_14.err
tests/goldens/types/undefined_ident_14.omni:1:20: error: undefined identifier "missing14"
     1 | let result14:int = missing14
       |                    ^^^^^^^^^
     2 | 
  hint: declare the variable with 'let missing14: <type> = <value>' or 'var missing14: <type> = <value>' before using it
