omni/tests/goldens/types/undefined_ident_14.omni
let result14:int = missing14
